--- a/Ex1/index.html
+++ b/Ex1/index.html
@@ -4,6 +4,6 @@
     </div> 
 
     <!-- import JS --> 
-    <script type="module" src="main.js"></script>
+    <script src="main.js" defer></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </body> 
