--- a/Ex1/index.html
+++ b/Ex1/index.html
@@ -1,6 +1,7 @@
 <body> 
     <div id="app">
         <h1>{{ product }}</h1>
+        <p>{{ description }}</p>
     </div> 
 
     <!-- import JS --> 
